All_Component_DX/force-app/main/default/objects/Service_Group_Costs__c/fields/Cost_Category__c.field-meta.xml
<CustomField>
    <fullName>Cost_Category__c</fullName>
    <description>Type of cost used for this group/member.</description>
    <inlineHelpText>Type of cost used for this group/member.</inlineHelpText>
    <label>Cost Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Straight</fullName>
            </value>
            <value>
                <fullName>Double Time</fullName>
            </value>
            <value>
                <fullName>Time and a Half</fullName>
            </value>
            <value>
                <fullName>After Hours</fullName>
            </value>
            <value>
                <fullName>On Call</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>