All_Component_DX/force-app/main/default/objects/Service_Group_Costs__c/fields/Group_Member__c.field-meta.xml
<CustomField>
    <fullName>Group_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the group member. Is a lookup to an existing service group member in ServiceMax</description>
    <inlineHelpText>Name of the group member. Is a lookup to an existing service group member in ServiceMax</inlineHelpText>
    <label>Technician/Equipment</label>
    <referenceTo>Service_Group_Members__c</referenceTo>
    <relationshipLabel>Team Labor Costs</relationshipLabel>
    <relationshipName>Service_Group_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>